clusters/sirius/apps/chimera-md/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chimera-md
spec:
  selector:
    app: chimera-md
  ports:
    - name: http
      port: 8080
      targetPort: http
