clusters/sirius/apps/chimera-md/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chimera-md-external
  labels:
    app.kubernetes.io/instance: chimera-md
    app.kubernetes.io/name: chimera-md
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - share.moonblade.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ak-outpost-chimera-md
          namespace: authentik
          port: 9000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chimera-md-internal
  labels:
    app.kubernetes.io/instance: chimera-md
    app.kubernetes.io/name: chimera-md
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - share.sirius.moonblade.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: chimera-md
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chimera-md-internal-redirect
  labels:
    app.kubernetes.io/instance: chimera-md
    app.kubernetes.io/name: chimera-md
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - share.sirius.moonblade.work
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
      matches:
        - path:
            type: PathPrefix
            value: /
